--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | QR code component</title>
 
@@ -13,16 +17,68 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+    <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      min-height: 100vh;
+      margin: 0;
+      font-family: 'Outfit', sans-serif;
+      background-color: #D5E1EF;
+    }
+    .card {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      border-radius: 15px;
+      max-width: 320px;
+      max-height: 499px;
+      background-color: #FFFFFF;
+      box-sizing: border-box;
+      padding: 16px;
+    }
+    #qr-code-img {
+      border-radius: 10px;
+      max-width: 288px;
+      max-height: 288px;
+    }
+    .text-container {
+      padding: 0px 16px 0px 16px;
+    }
+    .heading-text {
+      font-weight: 700;
+      font-size: 22px;
+      line-height: 120%;
+      letter-spacing: 0px;
+      text-align: center;
+      color: #1F314F;
+    }
+    .supporting-text {
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 140%;
+      letter-spacing: 0.2px;
+      text-align: center;
+      color: #68778D;
+    }
+  </style>
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+  <div class="card">
+    <div class="image-container">
+      <img src="/qr-code-component-main/images/image-qr-code.png" id="qr-code-img">
+    </div>  
+    <div class="text-container">
+      <p class="heading-text">Improve your front-end skills by building projects</p>
+      <p class="supporting-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Aidan Soares</a>.
   </div>
 </body>
 </html>
