--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +69,7 @@
 <body>
   <div class="card">
     <div class="image-container">
-      <img src="/qr-code-component-main/images/image-qr-code.png" id="qr-code-img">
+      <img src="images/image-qr-code.png" id="qr-code-img">
     </div>  
     <div class="text-container">
       <p class="heading-text">Improve your front-end skills by building projects</p>
