--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
   <div class="card">
     <div class="image-container">
-      <img src="images/image-qr-code.png" id="qr-code-img">
+      <img src="qr-code-component-main/images/image-qr-code.png" id="qr-code-img">
     </div>  
     <div class="text-container">
       <p class="heading-text">Improve your front-end skills by building projects</p>
