--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Aidan Soares</a>.
+    Coded by <a href="https://github.com/aidansoares23">Aidan Soares</a>.
   </div>
 </body>
 </html>
